build_error.txt
[ 18%] Built target ggml-base
[ 50%] Built target ggml-cpu
[ 54%] Built target ggml
[ 58%] Built target whisper
[ 60%] Building CXX object CMakeFiles/IdeaWalker.dir/src/ui/ConversationPanel.cpp.o
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/ConversationPanel.cpp: In static member function ‘static void ideawalker::ui::ConversationPanel::DrawContent(ideawalker::ui::AppState&)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/ConversationPanel.cpp:57:59: error: invalid use of incomplete type ‘class ideawalker::application::OrganizerService’
   57 |                      auto backlinks = app.organizerService->getBacklinks(activeNoteId);
      |                                                           ^~
In file included from /run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/ConversationPanel.hpp:7,
                 from /run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/ConversationPanel.cpp:6:
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/AppState.hpp:22:7: note: forward declaration of ‘class ideawalker::application::OrganizerService’
   22 | class OrganizerService;
      |       ^~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/ConversationPanel.cpp:59:68: error: invalid use of incomplete type ‘class ideawalker::application::OrganizerService’
   59 |                          std::string content = app.organizerService->getNoteContent(bl);
      |                                                                    ^~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/AppState.hpp:22:7: note: forward declaration of ‘class ideawalker::application::OrganizerService’
   22 | class OrganizerService;
      |       ^~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/ConversationPanel.cpp:60:43: error: no matching function for call to ‘std::vector<std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > >::push_back(<brace-enclosed initializer list>)’
   60 |                          context.push_back({bl, content});
      |                          ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/ConversationPanel.cpp:60:43: note: there are 2 candidates
In file included from /usr/include/c++/15/vector:68,
                 from /run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/AppState.hpp:15:
/usr/include/c++/15/bits/stl_vector.h:1416:7: note: candidate 1: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > >; value_type = std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >]’
 1416 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/15/bits/stl_vector.h:1416:35: note: no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > >::value_type&’ {aka ‘const std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >&’}
 1416 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/15/bits/stl_vector.h:1433:7: note: candidate 2: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > >; value_type = std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >]’
 1433 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/15/bits/stl_vector.h:1433:30: note: no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > >::value_type&&’ {aka ‘std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >&&’}
 1433 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/ConversationPanel.cpp:72:59: error: invalid use of incomplete type ‘class ideawalker::application::OrganizerService’
   72 |                      auto backlinks = app.organizerService->getBacklinks(activeNoteId);
      |                                                           ^~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/AppState.hpp:22:7: note: forward declaration of ‘class ideawalker::application::OrganizerService’
   22 | class OrganizerService;
      |       ^~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/ConversationPanel.cpp:74:68: error: invalid use of incomplete type ‘class ideawalker::application::OrganizerService’
   74 |                          std::string content = app.organizerService->getNoteContent(bl);
      |                                                                    ^~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/AppState.hpp:22:7: note: forward declaration of ‘class ideawalker::application::OrganizerService’
   22 | class OrganizerService;
      |       ^~~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/ConversationPanel.cpp:75:43: error: no matching function for call to ‘std::vector<std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > >::push_back(<brace-enclosed initializer list>)’
   75 |                          context.push_back({bl, content});
      |                          ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/ConversationPanel.cpp:75:43: note: there are 2 candidates
/usr/include/c++/15/bits/stl_vector.h:1416:7: note: candidate 1: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > >; value_type = std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >]’
 1416 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/15/bits/stl_vector.h:1416:35: note: no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > >::value_type&’ {aka ‘const std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >&’}
 1416 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/15/bits/stl_vector.h:1433:7: note: candidate 2: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > >; value_type = std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >]’
 1433 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/15/bits/stl_vector.h:1433:30: note: no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > >::value_type&&’ {aka ‘std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >&&’}
 1433 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/run/media/jpereiratrindade/labeco10T/dev/cpp/IdeaWalker/src/ui/ConversationPanel.cpp:150:29: error: ‘count’ is not a member of ‘std’
  150 |         int newlines = std::count(content.begin(), content.end(), '\n');
      |                             ^~~~~
make[2]: *** [CMakeFiles/IdeaWalker.dir/build.make:135: CMakeFiles/IdeaWalker.dir/src/ui/ConversationPanel.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:247: CMakeFiles/IdeaWalker.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
